--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ libwifi = "0.3"
 nix ={version="0.26",feature="ioctl"}
 wlan = {path="src/wlan"}
 aux = {path="src/aux"}
+cli = {path = "src/cli"}
 tui = "0.19.0"
 crossterm = "0.26.0"
 clap = { version = "4.1.13", features = ["derive"] }
