--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
-
 [workspace]
 
-members = ["src/wlan", "src/aux"]
+members = ["src/tui","src/wlan", "src/aux","src/cli","src/wpa"]
 
 [package]
-name = "wifiStalker"
+name = "spyfi"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,6 +14,5 @@ nix ={version="0.26",feature="ioctl"}
 wlan = {path="src/wlan"}
 aux = {path="src/aux"}
 cli = {path = "src/cli"}
-tui = "0.19.0"
-crossterm = "0.26.0"
-clap = { version = "4.1.13", features = ["derive"] }
+tui = {path = "src/tui"}
+crypto = {path = "src/crypto"}
