--- a/src/crypto/Cargo.toml
+++ b/src/crypto/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "aux"
+name = "crypto"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+pbkdf2 = {version = "0.12.1", features=["sha1"]}
+sha1 = "0.10.5"
