--- a/src/wpa/Cargo.toml
+++ b/src/wpa/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "aux"
+name = "wpa"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+wlan = {path = "../wlan"}
+libwifi = "0.3"
+itertools = "0.10.5"
+pnet_datalink = "0.33.0"
+hex = "0.4.3"
