--- a/src/wpa/Cargo.toml
+++ b/src/wpa/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 wlan = {path = "../wlan"}
+crypto = {path = "../crypto"}
+aux = {path = "../aux"}
 libwifi = "0.3"
 itertools = "0.10.5"
 pnet_datalink = "0.33.0"
 hex = "0.4.3"
+pcap = "1.0.0"
