--- a/src/tui/Cargo.toml
+++ b/src/tui/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+wlan = {path="../wlan"}
 tui = "0.19.0"
 crossterm = "0.26.0"
