--- a/src/tui/Cargo.toml
+++ b/src/tui/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 wlan = {path="../wlan"}
+wpa = {path="../wpa"}
 aux = {path="../aux"}
 tui = "0.19.0"
 crossterm = "0.26.0"
 rand = "0.8.5"
+lazy_static = "1.4.0"
+libwifi = "0.3.1"
