--- a/src/aux/Cargo.toml
+++ b/src/aux/Cargo.toml
@@ -3,5 +3,7 @@ name = "aux"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
