--- a/src/threads/Cargo.toml
+++ b/src/threads/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "aux"
+name = "threads"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+wpa = {path ="../wpa"}
+aux = {path ="../aux"}
+wlan = {path ="../wlan"}
+hex = "0.4.3"
