--- a/src/crypto/Cargo.toml
+++ b/src/crypto/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aux = {path ="../aux"}
 concat-arrays = "0.1.2"
 hex = "0.4.3"
 hmac = "0.12.1"
